--- a/css/front.css
+++ b/css/front.css
@@ -67,3 +67,120 @@ div.input:hover {
 div.input:focus {
 	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.33), 0 0 0 1px rgba(0,0,0,0.08);
 }
+input.search_t {
+	width: 420px;
+	height: 34px;
+	margin: 5px 0 0 15px;
+	border: none;
+	background-color: transparent;
+	font-size: 16px;
+	line-height: 34px;
+	height: 34px;
+	float: left;
+}
+div.mic {
+	float: left;
+	width: 24px;
+	height: 44px;
+	padding: 0 8px 0 8px;
+}
+div.mic img{
+	width: 24px;
+	height: 24px;
+	margin-top: 10px;
+}
+div.buttons {
+	width: 484px;
+	height: 58px;
+	margin: 15px auto 0;
+	overflow: visible;
+}
+div.buttons .left {
+	width: 242px;
+	height: 58px;
+	float: left;
+}
+div.buttons .right {
+	width: 242px;
+	height: 58px;
+	float: left;
+}
+input.search_b_l {
+	float: right;
+	min-width: 91.75px;
+	height: 34px;
+	padding: 0 16px 0;
+	background-color: #f2f2f2;
+	border: solid 1px #fff;
+	border-radius: 2px;
+	color: #757575;
+	margin: 11px 5px 11px;
+	font-size: 13px;
+	font-weight: bold;
+}
+input.search_b_l:hover {
+	color: #000;
+	border-color: #757575;
+}
+input.search_b_r {
+	float: left;
+	min-width: 91.75px;
+	height: 34px;
+	padding: 0 16px 0;
+	background-color: #f2f2f2;
+	border: solid 1px #fff;
+	border-radius: 2px;
+	color: #757575;
+	margin: 11px 5px 11px;
+	font-size: 13px;
+	font-weight: bold;
+}
+input.search_b_r:hover {
+	color: #000;
+	border-color: #757575;
+}
+div.words {
+	display:none;
+}
+div.daily {
+	width: 484px;
+	margin: 0 auto 0;
+	text-align: center;
+}
+div.daily a {
+	color: navy;
+}
+div.bottom {
+	width: 100%;
+	height: 40px;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	background-color: #f2f2f2;
+	border-top: 1px solid #e4e4e4;
+	line-height: 40px;
+}
+div.bottom .left {
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 40px;
+}
+div.bottom .left a {
+	height: 40px;
+	display: inline-block;
+	padding-left: 27px;
+	color: #5f6368;
+}
+div.bottom .right {
+	position: absolute;
+	top: 0;
+	right: 0;
+	height: 40px;
+}
+div.bottom .right a {
+	height: 40px;
+	display: inline-block;
+	padding-right: 27px;
+	color: #5f6368;
+}
